# messenger

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  pyproject.toml  readme.md
app/: Dockerfile  pyproject.toml  pytest.ini
app/base/: conftest.py  constants.py  exceptions.py  factories.py  middleware.py  shortcuts.py  urls.py  utils.py  views.py
app/chat/: conftest.py  consumers.py  factories.py  middleware.py  routing.py  tests.py  urls.py  views.py
app/messenger_project/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
app/room_messages/: admin.py  apps.py  conftest.py  factories.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
app/rooms/: admin.py  conftest.py  factories.py  models.py  permissions.py  schemas.py  serializers.py  tests.py  urls.py  views.py
app/templates/chat/: index.html  login.html  room.html
app/templates/socialaccount/: login.html
app/templates/verification/: email_verification.html
app/users/: adapters.py  admin.py  conftest.py  factories.py  models.py  permissions.py  schemas.py  serializers.py  tests.py  urls.py  views.py
nginx/: nginx.conf
